@@ -3,6 +3,7 @@
 S3method(as.psp,trip)
 S3method(cut,trip)
 S3method(print,summary.TORdata)
+S3method(st_as_sf,trip)
 S3method(trackAngle,default)
 S3method(trackAngle,trip)
 S3method(trackDistance,default)
@@ -55,6 +56,8 @@ importFrom(maptools,as.ppp.SpatialPointsDataFrame)
 importFrom(maptools,spRbind)
 importFrom(raster,raster)
 importFrom(raster,rasterize)
+importFrom(sf,st_as_sf)
+importFrom(sf,st_sfc)
 importFrom(spatstat,"[.psp")
 importFrom(spatstat,as.ppp)
 importFrom(spatstat,as.psp)
